# src/main/java/com/ande/pubquizzz/dto/QuizResultsResponse.java
@@ -1,0 +1,11 @@
+package com.ande.pubquizzz.dto;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class QuizResultsResponse {
+    private String quizTitle;
+    private List<QuizResultEntry> entries;
+}
